--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/juanpaulo/.netbeans/7.2/build.properties
+user.properties.file=/afs/eisc/user/pregrado/2009/juandapp/.netbeans/7.1.1/build.properties
